[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/musicScene.gd" type="Script" id=1]
[ext_resource path="res://assets/music/Giza Theme Activity Slide.ogg" type="AudioStream" id=2]
[ext_resource path="res://assets/music/Taj Mahal Theme Activity Slide.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/music/Colo Theme Activity Slide.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/music/Grand Palace Theme Activity Slide.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/music/Paris Theme Activity Slide.ogg" type="AudioStream" id=6]
[ext_resource path="res://assets/music/USA Theme Activity Slide.ogg" type="AudioStream" id=7]

[node name="musicScene" type="Node2D"]
script = ExtResource( 1 )

[node name="gizaMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="tajMahalMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="ColoMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="GrandPalaceMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="ParisMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="USAMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
